[project]
name = "vu1nz-gh-actions"
version = "1.0.0"
description = "🔐 GitHub Actions security scanner — detect CI/CD workflow vulnerabilities + AI code review via Claude"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "vu1nz" },
]

keywords = ["github-actions", "security", "ci-cd", "workflow-security", "devsecops"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/profullstack/vu1nz-gh-actions"
Repository = "https://github.com/profullstack/vu1nz-gh-actions"
"Documentation" = "https://github.com/profullstack/vu1nz-gh-actions"

[project.optional-dependencies]
claude = [
    "anthropic>=0.18.0",
]

test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
vu1nz = "vu1nz.cli:cli_entry"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vu1nz", "vu1nz.*"]
